--- a/SimpleGreyscale/android/app/build.gradle
+++ b/SimpleGreyscale/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.simplegreyscale"
+        applicationId "org.opencv.reactnative.samples.simplegreyscale"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
