changed app classpath from com to org.opencv.reactnative.samples

--- a/CvCameraPreview/android/app/build.gradle
+++ b/CvCameraPreview/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.cvcamerapreview"
+        applicationId "org.opencv.reactnative.samples.cvcamerapreview"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
