--- a/CvCameraPreview/android/app/src/main/AndroidManifest.xml
+++ b/CvCameraPreview/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cvcamerapreview">
+    package="org.opencv.reactnative.samples.cvcamerapreview">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
