--- a/CvCameraPreview/ios/Podfile
+++ b/CvCameraPreview/ios/Podfile
@@ -2,7 +2,7 @@ platform :ios, '9.0'
 
 use_frameworks!
 
-target "SimpleGreyscale" do
+target "CvCameraPreview" do
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
     'Core',
     'jschelpers',
@@ -28,5 +28,4 @@ target "SimpleGreyscale" do
   pod 'RNOpencv3', :path => '../node_modules/react-native-opencv3/ios/RNOpencv3.podspec', :subspecs => [
       'CvCamera'
   ]
-  pod 'RNFS', :path => '../node_modules/react-native-fs'
 end
