--- a/CvFaceDetection/android/settings.gradle
+++ b/CvFaceDetection/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'CvFaceDetection'
+include ':RNGL'
+project(':RNGL').projectDir = file('../node_modules/gl-react-native/android')
 include ':react-native-opencv3'
 project(':react-native-opencv3').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-opencv3/android')
 
