--- a/CvFaceDetection/android/app/build.gradle
+++ b/CvFaceDetection/android/app/build.gradle
@@ -137,8 +137,7 @@ android {
 }
 
 dependencies {
-    compile project(':RNGL')
-    compile project(':react-native-opencv3')
+    implementation project(':react-native-opencv3')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
