--- a/CvFaceDetection/ios/CvFaceDetection/Info.plist
+++ b/CvFaceDetection/ios/CvFaceDetection/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSCameraUsageDescription</key>
 	<string>to take photos and record video</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>to save photos to camera roll</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
