--- a/CvFaceLandmarks/android/app/build.gradle
+++ b/CvFaceLandmarks/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.cvfacelandmarks"
+        applicationId "org.opencv.reactnative.samples.cvfacelandmarks"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
