--- a/CvFaceLandmarks/ios/Podfile
+++ b/CvFaceLandmarks/ios/Podfile
@@ -1,5 +1,5 @@
 platform :ios, '9.0'
-  
+
 use_frameworks!
 
 target "CvFaceLandmarks" do
@@ -28,4 +28,5 @@ target "CvFaceLandmarks" do
   pod 'RNOpencv3', :path => '../node_modules/react-native-opencv3/ios/RNOpencv3.podspec', :subspecs => [
       'CvCamera'
   ]
+  pod 'OpenCVmin-face', :path => '../node_modules/react-native-opencv3/ios/frameworks/OpenCVmin-face/OpenCVmin-face.podspec'
 end
