--- a/CvFaceLandmarks/ios/Podfile
+++ b/CvFaceLandmarks/ios/Podfile
@@ -25,7 +25,7 @@ target "CvFaceLandmarks" do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
 
-  pod 'RNOpencv3', :path => '../node_modules/react-native-opencv3/ios/RNOpencv3.podspec', :subspecs => [
+  pod 'RNOpencv3', :podspec => '../node_modules/react-native-opencv3/ios/RNOpencv3.podspec', :subspecs => [
       'CvCamera'
   ]
 end
