--- a/SimpleGreyscale/package.json
+++ b/SimpleGreyscale/package.json
@@ -1,22 +1,23 @@
 {
   "name": "SimpleGreyscale",
   "version": "0.0.1",
-  "private": false,
+  "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4",
+    "react": "16.6.1",
+    "react-native": "0.57.8",
     "react-native-fs": "^2.12.1",
+    "react-native-image": "^0.1.1",
     "react-native-opencv3": "^1.0.4"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.0",
-    "react-test-renderer": "16.6.0-alpha.8af6728"
+    "metro-react-native-babel-preset": "0.51.1",
+    "react-test-renderer": "16.6.1"
   },
   "jest": {
     "preset": "react-native"
