--- a/CvImageManipulations/package.json
+++ b/CvImageManipulations/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-fs": "^2.13.3",
     "react-native-opencv3": "^1.0.4"
   },
   "devDependencies": {
