--- a/CvFaceDetection/android/app/build.gradle
+++ b/CvFaceDetection/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-opencv3')
+    compile project(':react-native-fs')
     implementation project(':react-native-opencv3')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
