updating some config stuff

--- a/CvFaceDetection/ios/Podfile
+++ b/CvFaceDetection/ios/Podfile
@@ -1,11 +1,10 @@
 platform :ios, '9.0'
 
-use_frameworks!
+# use_frameworks!
 
 target "CvFaceDetection" do
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
     'Core',
-    'jschelpers',
     'cxxreact',
     'CxxBridge', # Include this for RN >= 0.47
     'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
