fixing up video recording on android

--- a/CvCameraPreview/ios/Podfile
+++ b/CvCameraPreview/ios/Podfile
@@ -29,4 +29,6 @@ target "CvCameraPreview" do
   ]
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
 end
