--- a/CvCameraPreview/android/app/build.gradle
+++ b/CvCameraPreview/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-native-video-player')
+    compile project(':react-native-video')
     compile project(':react-native-fs')
     compile project(':react-native-opencv3')
     implementation fileTree(dir: "libs", include: ["*.jar"])
