--- a/CvCameraPreview/package.json
+++ b/CvCameraPreview/package.json
@@ -10,7 +10,8 @@
     "react": "16.6.1",
     "react-native": "0.57.8",
     "react-native-fs": "^2.13.3",
-    "react-native-opencv3": "^1.0.4"
+    "react-native-opencv3": "^1.0.4",
+    "react-native-video": "^4.4.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
