a couple minor fixes for taking pictures and recording video

--- a/CvCameraPreview/android/app/build.gradle
+++ b/CvCameraPreview/android/app/build.gradle
@@ -137,10 +137,9 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-native-video-player')
-    compile project(':react-native-video')
-    compile project(':react-native-fs')
-    compile project(':react-native-opencv3')
+    implementation project(':react-native-video')
+    implementation project(':react-native-fs')
+    implementation project(':react-native-opencv3')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
