finishing up recording video on ios

--- a/CvCameraPreview/ios/Podfile
+++ b/CvCameraPreview/ios/Podfile
@@ -29,6 +29,6 @@ target "CvCameraPreview" do
   ]
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
-  pod 'react-native-video', :path => '../node_modules/react-native-video'
+  pod 'react-native-video', :path => '../node_modules/react-native-video/react-native-video.podspec'
 
 end
