--- a/CvCameraPreview/android/app/src/main/AndroidManifest.xml
+++ b/CvCameraPreview/android/app/src/main/AndroidManifest.xml
@@ -1,28 +1,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.opencv.reactnative.samples.cvcamerapreview">
+  package="com.adamfreeman.rnocv3.samples.cvcamerapreview">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA"/>
+	
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
-
+	
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
+      android:screenOrientation="landscape"
       android:icon="@mipmap/ic_launcher"
+      android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+      android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+        android:screenOrientation="landscape"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-        android:windowSoftInputMode="adjustResize"
-        android:screenOrientation="landscape">
+        android:windowSoftInputMode="adjustResize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
