--- a/SimpleGreyscale/android/app/build.gradle
+++ b/SimpleGreyscale/android/app/build.gradle
@@ -102,7 +102,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.opencv.reactnative.samples.simplegreyscale"
+        applicationId "com.adamfreeman.rnocv3.samples.simplegreyscale"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
