changed app to use camera instead of image callbacks

--- a/HoughCircles/ios/HoughCircles/Info.plist
+++ b/HoughCircles/ios/HoughCircles/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>to take photos and record video</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>to save photos to camera roll</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
